<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="itp341.caceres.nicholas.puzzleGame.ColorPuzzle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_textView"
            android:text="@string/red_color"
            android:layout_marginEnd="10dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/red_seekbar"
            android:max="255"
            android:progress="0"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_textView"
            android:text="@string/green_color"
            android:layout_marginEnd="10dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/green_seekbar"
            android:max="255"
            android:progress="0"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blue_textView"
            android:text="@string/blue_color"
            android:layout_marginEnd="10dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/blue_seekbar"
            android:max="255"
            android:progress="0"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/preview_textView"
        android:text="@string/color_preview"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/color_view"
        android:background="#000000"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/color_changes_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/change_button_label"/>

</LinearLayout>
